gce/policy-scale-test/nginx-server.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx 
spec:
  clusterIP: 10.100.0.50
  selector:
    role: nginx-server
  ports:
  - port: 80 
    targetPort: 80
