gce/policy-scale-test/nginx-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  namespace: default
  name: nginx-service
spec:
  podSelector:
    k8s-app: nginx-server
  ingress:
    - from:
        - pods:
            role: getter
      ports:
        - protocol: TCP
          port: 80
